--- a/exercicios/ex22 - img background/fundo001.html
+++ b/exercicios/ex22 - img background/fundo001.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Teste de imagem de fundo</title>
     <style>
+        body{
+            background-image: url('imgs/pattern004.png');
+        }
         .quadrado{
             border: 2px solid black;
             width: 300px;
