--- a/exercicios/ex22 - img background/fundo006.html
+++ b/exercicios/ex22 - img background/fundo006.html
@@ -17,7 +17,9 @@
             background-size: cover;
             /* background-size: 100% 100%; */
             /*
-            background-size: contain - faz com que a imagem seja 100% exibida ;
+            background-size: auto; - automatica
+
+            background-size: contain - faz com que a imagem seja 100% exibida, criando barrars pretas nas laterais ou encima/embaixo;
             
             background-size: cover = cobrindo a tela inteira mesma que tenha que cortar a imagem, independente do tamanho da tela;
 
