--- a/exercicios/ex22 - img background/attachment.html
+++ b/exercicios/ex22 - img background/attachment.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Documento</title>
+    <title>Fundo fixo de tela</title>
     <style>
-
+        
+/* vindulo = attachment */
         body{
             height: 100vh;
             background-color: black;
